fixtures/valid/short-function.scl
@mixin()
    __body__()

mixin:
    hello = 123

mixin
    hello = 456
