fixtures/invalid/mixin-argument-scope.scl
@mixin($arg)
    var = "$arg"

mixin($myArg)
